# Text-3D_Generator

./: .gitignore  readme.md
app/: Dockerfile  frontend.py  main.py  pyproject.toml  start.bat
